Agregamos window a cada función en main.js, segun JEST

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,9 +1,10 @@
 {
   "env": {
     "node": true,
-    "mocha": true
+    "jest": true
   },
   "globals": {
-    "assert": false
+    "assert": false,
+    "expect":false
   }
 }
