--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
   },
   "extends": "eslint:recommended",
   "globals": {
-    "example": false
+    "example": false,
+    "sortData": false,
+    "filterData": false,
+    "computeStats": false
   }
 }
