changing object POKEMON

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,13 @@
   },
   "extends": "eslint:recommended",
   "globals": {
-    "example": false
+    "example": false,
+    "computeStats": false,
+    "filterData": false,
+    "sortData": false,
+    "POKEMON": false,
+    "functionsPokemon": false
+ 
+
   }
 }
