--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.9.0",
     "eslint-plugin-jest": "^22.1.2",
+    "express": "^4.16.4",
     "htmlhint": "^0.10.1",
     "jest": "^24.5.0"
   }
